update PN license
Signed-off-by: agborntui <agbate@ibm.com>

--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-platform-navigator-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-platform-navigator-instance.yaml
@@ -27,7 +27,7 @@ spec:
             spec:
               license:
                 accept: true
-                license: L-RJON-C7QG3S
+                license: L-RJON-BZFQU2
               mqDashboard: true
               version: "2021.2.1"
               replicas: 2
